--- a/ex1.html
+++ b/ex1.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- ทำการเพิ่ม font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+Thai:wght@100..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <style>
+        body{
+            font-family: "Prompt", serif;
+            font-weight: 400;
+            font-style: normal;
+            margin-left: 100px;
+        }
+        h1{
+            color:blue;
+            background-color: yellow;
+            text-align:center;
+        }
+        h2{
+            color:yellow;
+            background-color: blueviolet;
+            text-align:center;
+            border-style:solid;
+            border-width:10px;
+        }
+        dech{
+            color:darkred;
+            font-size:30px;          
+           }
+    </style>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my web</title>
@@ -23,8 +54,14 @@
 
     <h2>รูป card วันปีใหม่</h2>
 
-    <img src="pic1.jpg" alt="">
-
+    <center><img src="pic1.jpg" alt=""></center>
+    
+    <h2>กลอนวันปีใหม่ ให้คนที่เรารัก </h2>
+    <center>
+    <dech> โลกมีหมุน เวียนเปลี่ยน จากจุดเดิม <br>
+        มีสิ่งใหม่ เข้ามาเพิ่ม เติมสีสัน <br>
+        ปีเก่าผ่าน วันวานพ้น คนละวัน <br>
+        เรื่องร้ายร้าย ให้ลืมมัน เถิดคนดี <br> </dech></center>
 
 </body>
     
